# panorama-manager

./: .gitignore  .releaserc.json  Cargo.toml  LICENSE  README.md  releaserc.json
.github/workflows/: release.yml  rust.yml
crates/panorama-core/: Cargo.toml
crates/panorama-core/src/: adb.rs  config.rs  device.rs  display.rs  ipc.rs  lib.rs  media.rs  metrics.rs  protocol.rs  transport.rs
crates/panorama-core/tests/: captured_frames.rs  live_device.rs
crates/panorama-ctl/: Cargo.toml
crates/panorama-ctl/src/: main.rs
crates/panorama-gui/: package-lock.json  package.json
crates/panorama-gui/src/: app.html
crates/panorama-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/panorama-gui/src-tauri/icons/: icon.icns
crates/panorama-gui/src-tauri/src/: lib.rs  main.rs
crates/panorama-gui/src/lib/: display.ts
crates/panorama-gui/src/lib/components/: DisplaySurface.svelte  Sidebar.svelte  WorkInProgressPage.svelte
crates/panorama-gui/src/routes/: +layout.svelte  +page.svelte
crates/panorama-gui/src/routes/cooling/: +page.svelte
crates/panorama-gui/src/routes/display/: +page.svelte
crates/panorama-gui/src/routes/media/: +page.svelte
crates/panorama-gui/src/routes/settings/: +page.svelte
docs/: adb-protocol.md  development.md  display-capabilities.md  packaging.md  usage.md
packaging/: 70-tryx-panorama.rules  panorama-mgr.desktop  panorama.service
scripts/: install.sh  package-release.sh  teardown.sh
