[package]
name = "panorama-ctl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

# The crate stays `panorama-ctl`, but the binary installs/runs as `pctl`
# (the Linux `*ctl` convention — systemctl, journalctl, bluetoothctl).
[[bin]]
name = "pctl"
path = "src/main.rs"

[dependencies]
panorama-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
humansize = { workspace = true }
shlex = { workspace = true }
ctrlc = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sd-notify = "0.5"
