[package]
name = "panorama-gui"
version = "0.1.0"
description = "Linux desktop GUI for panorama-mgr"
authors = ["AfroSamuraiX <overlord.tooling.corp@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "panorama_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
tauri = { version = "2", features = ["protocol-asset"] }
panorama-core = { path = "../../panorama-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
